--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <p>Crée, édite et publie tes projets avec puissance et style.<br>
   Télécharge la dernière version ci-dessous 👇</p>
 
-  <button onclick="window.location.href='https://github.com/MaxiStudioDev/MagicaStudioPro/releases/download/1.0/MagicaSetup.exe'">
+  <button onclick="window.location.href='https://maxistudiodev.itch.io/magicastudiopro'">
     Télécharger maintenant 📦
   </button>
 
