--- a/index.html
+++ b/index.html
@@ -1,67 +1,136 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="googlea1301fd0eae9ac96" />
-  <title>Magica Studio Pro</title>
-  <style>
-    body {
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #fff;
-      font-family: "Poppins", Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      overflow: hidden;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5em;
-    }
-    p {
-      color: #cbd5e1;
-      max-width: 600px;
-      margin-bottom: 2em;
-      line-height: 1.5;
-    }
-    button {
-      background: #3b82f6;
-      color: #fff;
-      border: none;
-      padding: 15px 40px;
-      border-radius: 12px;
-      font-size: 18px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
-    }
-    button:hover {
-      background: #2563eb;
-      transform: scale(1.05);
-      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.5);
-    }
-    footer {
-      position: absolute;
-      bottom: 15px;
-      font-size: 0.9rem;
-      color: #94a3b8;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Magica Studio Pro</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+    
+    * {
+      box-sizing: border-box;
+    }
+    
+    body {
+      background: linear-gradient(135deg, #0f172a, #1e293b);
+      color: #fff;
+      font-family: "Poppins", Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      position: relative;
+    }
+    
+    h1 { 
+      font-size: clamp(2.5rem, 5vw, 3.5rem); 
+      margin-bottom: 0.5em; 
+      font-weight: 700;
+    }
+    
+    p { 
+      color: #cbd5e1; 
+      max-width: 600px; 
+      margin-bottom: 2em; 
+      line-height: 1.5; 
+      font-size: 1.1rem;
+    }
+    
+    button {
+      background: #3b82f6;
+      color: #fff;
+      border: none;
+      padding: 15px 40px;
+      border-radius: 12px;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+      margin-bottom: 30px; /* Ajout d'une marge pour séparer la nouvelle section */
+    }
+    
+    button:hover {
+      background: #2563eb;
+      transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.5);
+    }
+    
+    button:disabled {
+      background: #64748b;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
+    
+    /* Nouveau Style pour la Section Inférieure */
+    .info-box {
+      background-color: #1f2937; /* Couleur de fond plus claire que le body */
+      border: 2px solid #3b82f6; /* Contour bleu soigné */
+      border-radius: 10px;
+      padding: 30px;
+      max-width: 450px; /* Taille pour le centrage */
+      margin-top: 20px;
+      box-shadow: 0 0 20px rgba(59, 130, 246, 0.2); /* Ombre légère pour le relief */
+      width: 100%;
+    }
+
+    .info-text {
+      font-size: 1.1rem;
+      font-weight: 500;
+      color: #ffffff;
+      margin: 0;
+      line-height: 1.6;
+    }
+    
+    footer { 
+      position: absolute; 
+      bottom: 15px; 
+      font-size: 0.9rem; 
+      color: #94a3b8; 
+      width: 100%;
+      text-align: center;
+    }
+    
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+      
+      p {
+        font-size: 1rem;
+      }
+      
+      button {
+        padding: 12px 30px;
+        font-size: 16px;
+      }
+      
+      .info-box {
+        padding: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>🚀 Magica Studio Pro</h1>
-  <p>Crée, édite et publie tes projets avec puissance et style.<br>
-  Télécharge la dernière version ci-dessous 👇</p>
+  <h1>🚀 Magica Studio Pro</h1>
+    <p>Cliquez sur le bouton ci-dessous pour accéder à la page de téléchargement sur Itch.io 👇</p>
 
-  <button onclick="window.location.href='https://maxistudiodev.itch.io/magicastudiopro'">
-    Télécharger maintenant 📦
-  </button>
+    <button onclick="window.location.href='https://maxistudiodev.itch.io/magicastudiopro'">
+    Télécharger sur Itch.io 🎮
+  </button>
 
-  <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
-</body>
+    <div class="info-box">
+    <p class="info-text">
+      **Test de Test :** Ceci est une section d'information supplémentaire, ajoutée en bas de la page.
+      Elle est bien centrée et entourée d'un contour soigné pour attirer l'attention sur ce texte important.
+    </p>
+  </div>
+    <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
+
+  </body>
 </html>
